NULL Compositor global static on deletion

what moc can do any time for the Workspace deconstructor
BUG: 308040
FIXED-IN: 4.10
REVIEW: 108007